working chats, but still only on 1.21.1