@@ -22,10 +22,10 @@
 
 package io.github.axolotlclient.api.chat;
 
-import java.text.SimpleDateFormat;
 import java.time.Instant;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import com.mojang.blaze3d.systems.RenderSystem;
 import io.github.axolotlclient.api.API;
@@ -73,27 +73,32 @@ public class ChatWidget extends AlwaysSelectedEntryListWidget<ChatWidget.ChatLin
 
 		ChatHandler.getInstance().setMessagesConsumer(chatMessages -> chatMessages.forEach(this::addMessage));
 		ChatHandler.getInstance().setMessageConsumer(this::addMessage);
-		ChatHandler.getInstance().setEnableNotifications(message -> !Arrays.stream(channel.getUsers()).collect(Collectors.toUnmodifiableSet()).contains(message.getSender()));
+		ChatHandler.getInstance().setEnableNotifications(message -> !message.channelId().equals(channel.getId()));
 
 		setScrollAmount(getMaxScroll());
 	}
 
 	@Override
 	protected int getScrollbarPositionX() {
-		return x + width - 5;
+		return x + width - 6;
+	}
+
+	@Override
+	public int getRowWidth() {
+		return width-60;
 	}
 
 	private void addMessage(ChatMessage message) {
-		List<OrderedText> list = client.textRenderer.wrapLines(Text.of(message.getContent()), getRowWidth());
+		List<OrderedText> list = client.textRenderer.wrapLines(Text.of(message.content()), getRowWidth());
 
 		boolean scrollToBottom = getScrollAmount() == getMaxScroll();
 
-		if (messages.size() > 0) {
-			ChatMessage prev = messages.get(messages.size() - 1);
-			if (!prev.getSender().equals(message.getSender())) {
+		if (!messages.isEmpty()) {
+			ChatMessage prev = messages.getLast();
+			if (!(prev.sender().equals(message.sender()) && prev.senderDisplayName().equals(message.senderDisplayName()))) {
 				addEntry(new NameChatLine(message));
 			} else {
-				if (prev.getTimestamp() - message.getTimestamp() > 150) {
+				if (prev.timestamp().getEpochSecond() - message.timestamp().getEpochSecond() > 150) {
 					addEntry(new NameChatLine(message));
 				}
 			}
@@ -104,18 +109,18 @@ public class ChatWidget extends AlwaysSelectedEntryListWidget<ChatWidget.ChatLin
 		list.forEach(t -> addEntry(new ChatLine(t, message)));
 		messages.add(message);
 
-		children().sort(Comparator.comparingLong(c -> c.getOrigin().getTimestamp()));
+		children().sort(Comparator.comparingLong(c -> c.getOrigin().timestamp().getEpochSecond()));
 
 		if (scrollToBottom) {
 			setScrollAmount(getMaxScroll());
 		}
-		messages.sort(Comparator.comparingLong(ChatMessage::getTimestamp));
+		messages.sort(Comparator.comparingLong(value -> value.timestamp().getEpochSecond()));
 	}
 
 	private void loadMessages() {
 		long before;
-		if (messages.size() > 0) {
-			before = messages.get(0).getTimestamp();
+		if (!messages.isEmpty()) {
+			before = messages.getFirst().timestamp().getEpochSecond();
 		} else {
 			before = Instant.now().getEpochSecond();
 		}
@@ -140,10 +145,10 @@ public class ChatWidget extends AlwaysSelectedEntryListWidget<ChatWidget.ChatLin
 
 	@Override
 	protected void drawEntrySelectionHighlight(GuiGraphics graphics, int y, int entryWidth, int entryHeight, int borderColor, int fillColor) {
-		int i = this.getX() + (this.width - entryWidth) / 2;
+		/*int i = this.getX() + (this.width - entryWidth) / 2;
 		int j = this.getX() + (this.width + entryWidth) / 2;
-		graphics.fill(i, y - 2, j, y + entryHeight, borderColor);
-		graphics.fill(i + 1, y - 1, j - 1, y + entryHeight - 1, fillColor);
+		//graphics.fill(i, y - 2, j, y + entryHeight, borderColor);
+		graphics.fill(i + 1, y - 1, j - 1, y + entryHeight - 1, fillColor);*/
 	}
 
 	@Override
@@ -172,12 +177,12 @@ public class ChatWidget extends AlwaysSelectedEntryListWidget<ChatWidget.ChatLin
 			}
 			if (button == 1) {
 				ContextMenu.Builder builder = ContextMenu.builder()
-					.entry(Text.of(origin.getSender().getName()), buttonWidget -> {
+					.entry(Text.of(origin.sender().getName()), buttonWidget -> {
 					})
 					.spacer();
-				if (!origin.getSender().equals(API.getInstance().getSelf())) {
+				if (!origin.sender().equals(API.getInstance().getSelf())) {
 					builder.entry(Text.translatable("api.friends.chat"), buttonWidget -> {
-							ChannelRequest.getOrCreateDM(origin.getSender().getUuid())
+							ChannelRequest.getOrCreateDM(origin.sender().getUuid())
 								.whenCompleteAsync((channel, throwable) -> client.setScreen(new ChatScreen(screen.getParent(), channel)));
 						})
 						.spacer();
@@ -187,7 +192,7 @@ public class ChatWidget extends AlwaysSelectedEntryListWidget<ChatWidget.ChatLin
 					})
 					.spacer()
 					.entry(Text.translatable("action.copy"), buttonWidget -> {
-						client.keyboard.setClipboard(origin.getContent());
+						client.keyboard.setClipboard(origin.content());
 					});
 				screen.setContextMenu(builder.build());
 				return true;
@@ -223,7 +228,7 @@ public class ChatWidget extends AlwaysSelectedEntryListWidget<ChatWidget.ChatLin
 
 		@Override
 		public Text getNarration() {
-			return Text.of(origin.getContent());
+			return Text.of(origin.content());
 		}
 	}
 
@@ -232,18 +237,18 @@ public class ChatWidget extends AlwaysSelectedEntryListWidget<ChatWidget.ChatLin
 		private final String formattedTime;
 
 		public NameChatLine(ChatMessage message) {
-			super(Text.literal(message.getSenderDisplayName())
+			super(Text.literal(message.senderDisplayName())
 				.setStyle(Style.EMPTY.withBold(true)).asOrderedText(), message);
 
-			SimpleDateFormat DATE_FORMAT = new SimpleDateFormat("d/M/yyyy H:mm");
-			formattedTime = DATE_FORMAT.format(new Date(message.getTimestamp() * 1000));
+			DateTimeFormatter DATE_FORMAT = DateTimeFormatter.ofPattern("d/M/yyyy H:mm");
+			formattedTime = DATE_FORMAT.format(message.timestamp().atZone(ZoneId.systemDefault()));
 		}
 
 		@Override
 		protected void renderExtras(GuiGraphics graphics, int x, int y, int mouseX, int mouseY) {
 			RenderSystem.disableBlend();
-			Identifier texture = Auth.getInstance().getSkinTexture(getOrigin().getSender().getUuid(),
-				getOrigin().getSender().getName());
+			Identifier texture = Auth.getInstance().getSkinTexture(getOrigin().sender().getUuid(),
+				getOrigin().sender().getName());
 			graphics.drawTexture(texture, x - 22, y, 18, 18, 8, 8, 8, 8, 64, 64);
 			graphics.drawTexture(texture, x - 22, y, 18, 18, 40, 8, 8, 8, 64, 64);
 			RenderSystem.enableBlend();
